--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
       body > div {
         height: 100%;
         margin: 0;
+        color: #262730;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
