--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       rel="stylesheet"
     />
 
-    <title>React App</title>
+    <title>DIGITAL MUSEUM</title>
     <style>
       html,
       body,
